# tojr

./: .gitignore
bindings/: CMakeLists.txt  test.py
bindings/python/: optjump_python.cpp  test.cpp
towr/: CMakeLists.txt  example.cpp
towr/include/towr/: nlp_formulation.h  optjump.h  vec_optjump.h
towr/include/towr/constraints/: jump_constraint.h
towr/include/towr/initialization/: takeoff_generation.h
towr/include/towr/kinematics/: euler.h
towr/include/towr/models/: dynamic_model.h  robot_model.h
towr/include/towr/models/examples/: olympus_model.h
towr/include/towr/terrain/: height_map.h  terrain_data.h  terrain_parser.h
towr/include/towr/terrain/examples/: height_map_examples.h
towr/include/towr/variables/: jump_duration.h  node_spline.h  nodes_variables.h
towr/src/: base_motion_constraint.cc  height_map_examples.cc  jump_constraint.cc  jump_duration.cc  nlp_formulation.cc  node_spline.cc  nodes_variables.cc  nodes_variables_all.cc  optjump.cc  parameters.cc  vec_optjump.cc
towr/test/: foo.cc  olympus_example.cc  optjump_example.cc  terrain_pars.cc  vec_optjump_example.cc
towr_ros/include/towr_ros/: towr_ros_interface.h  towr_user_interface.h
towr_ros/msg/: TowrCommand.msg
towr_ros/src/: rviz_terrain_publisher.cc  towr_ros_app.cc  towr_ros_interface.cc  towr_user_interface.cc
